# recycled-neutrino-tangos

./: README.md  acinclude.m4  configure.ac
data/: Makefile.am
data/config/: Makefile.am  cables.xml  tobackup.conf
data/control/: Makefile.am  migration.sh  movieplayer.end  movieplayer.start  recording.end  recording.start  standby.off  standby.on
data/fonts/: Makefile.am
data/icons/: Makefile.am
data/icons/buttons/: Makefile.am
data/icons/headers/: Makefile.am
data/icons/hints/: Makefile.am
data/icons/locale/: Makefile.am
data/icons/status/: Makefile.am
data/icons/various/: Makefile.am
data/initial/: Makefile.am
data/locale/: Makefile.am  deutsch.locale  english.locale  polski.locale  russkij.locale
data/locale/helpers/: create-locals.h  create-locals_intern.h
data/locale/unmaintained/: nederlands.locale  slovak.locale
data/oled/themes/: Makefile.am
data/pictures/: Makefile.am
data/scripts/: Makefile.am  backup.sh  wakeup_hdd.sh
data/themes/: Diana.theme  Grey-Black.theme  Makefile.am  Material_Blue-Grey.theme  NI.theme  Neutrino-3.0.theme  NovaTux.theme  Olive-1.0.theme  Sportster.theme  TangoCash-Skin1.theme  TangoCash-Skin2.theme  TangoCash.skin  TangoCash.theme  adtheme.theme  blau.theme  colors.theme  glassHD.theme  nesh.theme
data/themes/TangoCash/: Makefile.am
data/themes/TangoCash-Skin1/: Makefile.am  skin.conf
data/themes/TangoCash-Skin2/: Makefile.am  skin.conf
data/webradio/: webradio_usr.xml
data/y-web/: Makefile.am  Y_Blocks.txt  Y_Live_Menue.yhtm  Y_Menue.yhtm  Y_Settings_buttons.yhtm  Y_Settings_yWeb.yhtm  Y_Tools_Screenshot.yhtm  Y_neutrino_Blocks.txt
data/y-web/images/: Makefile.am
data/y-web/languages/: Deutsch  English  Russian
data/y-web/scripts/: Y_Tools.sh
data/zapit/: Makefile.am  epgmap.xml  myservices.xml
lib/: Makefile.am
lib/hardware/coolstream/: hardware_caps.cpp
lib/jsoncpp/: jsoncpp.cpp
lib/jsoncpp/json/: json-forwards.h  json.h
lib/libdvbapi/: Makefile.am  audio.cpp  audio.h  debug.cpp  debug.h  dmx.cpp  dmx.h  hardware_caps.c  hardware_caps.h  hdmi_cec.cpp  hdmi_cec.h  playback.h  playback_gst.cpp  playback_gst.h  playback_libeplayer3.cpp  playback_libeplayer3.h  playback_pc.cpp  playback_pc.h  proc_tools.c  record.cpp  record.h  video.cpp  video.h
lib/libdvbci/: Makefile.am  ca.cpp  ca.h  ca_ci.cpp  ca_ci.h  common_access.h  descrambler.cpp  dvbci_ccmgr.cpp  dvbci_resmgr.cpp  mmi.h  types.h
lib/libdvbsub/: Makefile.am  dvbsub.cpp  dvbsub.h  dvbsubtitle.cpp  dvbsubtitle.h  tools.h
lib/libeplayer3/: Makefile.am
lib/libeplayer3/container/: buff_ffmpeg.c  container_ffmpeg.c  tools_ffmpeg.c
lib/libeplayer3/include/: manager.h  misc.h  output.h
lib/libeplayer3/main/: exteplayer.c
lib/libeplayer3/manager/: chapter.c
lib/libeplayer3/output/: linuxdvb_fake.c  linuxdvb_mipsel.c  linuxdvb_sh4.c  output.c
lib/libeplayer3/playback/: playback.c
lib/libeventserver/: Makefile.am  eventserver.cpp
lib/libiw/: iwlib.c  iwlib.h  iwscan.cpp  wireless.h
lib/libnet/: libnet.cpp  libnet.h
lib/libtuxtxt/: Makefile.am  libtuxtxt.cpp  tuxtxt.cpp  tuxtxt.h  tuxtxt_common.h
lib/libupnpclient/: UPNPDevice.cpp  UPNPSocket.cpp  upnpclient.h
lib/luaclient/: luaclient.cpp
lib/sectionsdclient/: Makefile.am  sectionsdMsg.h  sectionsdclient.cpp  sectionsdclient.h
lib/timerdclient/: Makefile.am  timerdclient.cpp  timerdclient.h
lib/xmltree/: gzstream.h  xmlinterface.cpp  xmlinterface.h  xmlparse.cpp  xmlparse.h  xmltimpl.c  xmltok.c  xmltok.h  xmltree.cpp  xmltree.h
src/: Makefile.am  create_rcsim_h.sh  drivertool.c  dt.c  global.h  neutrino.cpp  neutrino.h  neutrinoMessages.h  neutrino_menue.cpp  neutrino_menue.h  rcsim.c  uncoolinit.cpp
src/daemonc/: Makefile.am  remotecontrol.cpp  remotecontrol.h
src/driver/: Makefile.am  audioplay.cpp  audioplay.h  colorgradient.cpp  display.h  fade.cpp  fade.h  fb_accel.h  fb_accel_arm.cpp  fb_accel_cs_hd1.cpp  fb_accel_cs_hd2.cpp  fb_accel_cs_hdx.cpp  fb_accel_cs_hdx_inc.h  fb_accel_glfb.cpp  fb_accel_mips.cpp  fb_accel_sti.cpp  fb_accel_sti_ddt.cpp  fb_accel_sti_ddt.h  fb_generic.cpp  fb_generic.h  fb_generic_sti_ddt.cpp  fb_generic_sti_ddt.h  fb_window.cpp  fbaccel.cpp  fontrenderer.cpp  fontrenderer.h  framebuffer.cpp  framebuffer.h  framebuffer_ng.cpp  framebuffer_ng.h  glthread.cpp  glthread.h  hdmi_cec.cpp  hdmi_cec.h  hdmi_cec_types.h  lcd4l.cpp  lcd4l.h  lcdd.cpp  lcdd.h  movieinfo.cpp  (+28 more)
src/driver/audiodec/: Makefile.am  basedec.cpp  crc.c  ffmpegdec.cpp  ffmpegdec.h  fft.c  flacdec.cpp  flacdec.h  int_fft.c  mp3dec.cpp  oggdec.cpp  oggdec.h  vis.cpp  wavdec.cpp
src/driver/glcd/: Makefile.am  analogclock.cpp  digitalclock.cpp  digitalclock.h  glcd.cpp  glcd.h  simpleclock.cpp  simpleclock.h  weather.cpp  weather.h
src/driver/pictureviewer/: Makefile.am  bmp.cpp  crw.cpp  fb_display.cpp  gif.cpp  jpeg.cpp  nanosvg.h  nanosvgrast.h  pictureviewer.cpp  png.cpp  (+2 more)
src/eitd/: Makefile.am  SIevents.cpp  SIlanguage.cpp  SIutils.cpp  dmx.cpp  dmx.h  edvbstring.cpp  eitd.h  sectionsd.cpp  sectionsd.h  xmlutil.cpp
src/gui/: 3dsetup.cpp  3dsetup.h  Makefile.am  adzap.cpp  adzap.h  audio_select.cpp  audio_select.h  audio_setup.cpp  audio_setup.h  audiomute.cpp  audiomute.h  audioplayer.cpp  audioplayer.h  audioplayer_setup.cpp  audioplayer_setup.h  bookmarkmanager.cpp  bookmarkmanager.h  bouquetlist.cpp  bouquetlist.h  buildinfo.cpp  buildinfo.h  cam_menu.cpp  cam_menu.h  cec_setup.cpp  cec_setup.h  channellist.cpp  channellist.h  color.cpp  color.h  daemon_control.cpp  dboxinfo.cpp  dboxinfo.h  epgplus.cpp  epgplus.h  epgview.cpp  epgview.h  eventlist.cpp  eventlist.h  favorites.cpp  favorites.h  (+148 more)
src/nhttpd/: Makefile.am  nhttpd.conf.in  yconfig.h
src/system/: Makefile.am  configure_network.h  debug.h  flashtool.cpp  flashtool.h  fsmounter.cpp  fsmounter.h  hddstat.h  helpers.cpp  helpers.h  lastchannel.cpp  localize.cpp  localize.h  locals.h  locals_intern.h  luaserver.cpp  ping.cpp  ping.h  proc_tools.cpp  setting_helpers.cpp  setting_helpers.h  settings.cpp  settings.h
src/timerd/: Makefile.am  timermanager.cpp  timermanager.h
(+310 files in other folders)
