installdir = $(THEMESDIR)

SUBDIRS = \
	Grey-Blue/icons/buttons \
	Neutrino-3.0/icons/buttons \
	Olive-3.0/icons/buttons

install_DATA = \
	AdulteratedOrange.theme \
	adtheme.theme \
	Blue.theme \
	Bluemoon-3.0.theme \
	Classic.theme \
	colors.theme \
	Crema.theme \
	DarkBlue.theme \
	DarkBrown.theme \
	DarkOrange.theme \
	DVB2000.theme \
	GlassHD.theme \
	Grey.theme \
	Grey-Black.theme \
	Grey-Blue.theme \
	MonoChrom.theme \
	nesh.theme \
	NovaTux.theme \
	Neutrino3.0.theme \
	Olive-1.0.theme \
	Olive-2.0.theme \
	Olive-3.0.theme \
	Origin.theme \
	Red.theme \
	Sportster.theme \
	VirginMedia.theme \
	TangoCash.theme
