SUBDIRS = \
	Grey-3.0/icons/buttons \
	Grey-Blue/icons/buttons \
	Neutrino-3.0/icons/buttons \
	Olive-3.0/icons/buttons

installdir = $(THEMESDIR)

install_DATA = \
	AdulteratedOrange.theme \
	adtheme.theme \
	bgfade.theme \
	Blue.theme \
	Bluemoon-3.0.theme \
	Classic.theme \
	colors.theme \
	Crema.theme \
	DarkBlue.theme \
	DarkBrown.theme \
	DarkOrange.theme \
	dbox-all.theme \
	DVB2000.theme \
	GlassHD.theme \
	Gray.theme \
	Material_Blue-Grey.theme \
	Material_Grey_(Dark).theme \
	Material_Grey_(Light).theme \
	Material_Grey_(Medium).theme \
	megasat4000.theme \
	Grey.theme \
	Grey-3.0.theme \
	Grey-Black.theme \
	Grey-Blue.theme \
	Lechuk.theme \
	MonoChrom.theme \
	nesh.theme \
	NovaTux.theme \
	Neutrino3.0.theme \
	Olive.theme \
	Olive-1.0.theme \
	Olive-2.0.theme \
	Olive-3.0.theme \
	Origin.theme \
	Red.theme \
	Sportster.theme \
	VirginMedia.theme \
	TangoCash.theme
