installdir = $(ICONSDIR)

install_DATA = \
	ci+_green.png \
	ci+_white.png \
	dec_card.png \
	dec_fta.png \
	dec_int.png \
	dec_na.png \
	dec_net.png \
	gbox_green.png \
	gbox_white.png \
	gbox_yellow.png \
	oscam_green.png \
	oscam_white.png \
	oscam_yellow.png \
	cccam_green.png \
	cccam_white.png \
	cccam_yellow.png \
	osmod_green.png \
	osmod_white.png \
	osmod_yellow.png \
	doscam_green.png \
	doscam_white.png \
	doscam_yellow.png \
	ncam_green.png \
	ncam_white.png \
	ncam_yellow.png \
	mgcamd_green.png \
	mgcamd_white.png \
	mgcamd_yellow.png

