installdir = $(THEMESDIR)/Diana/icons

install_DATA = \
	0.png \
	16_9_gray.png \
	16_9.png \
	1.png \
	2.png \
	3.png \
	4.png \
	5.png \
	6.png \
	7.png \
	8.png \
	9.png \
	btn_blue.png \
	btn_green.png \
	btn_option_off_active.png \
	btn_option_off_inactive.png \
	btn_option_on_active.png \
	btn_option_on_inactive.png \
	btn_play.png \
	btn_record_active.png \
	btn_record_inactive.png \
	btn_red.png \
	btn_yellow.png \
	ca_gray.png \
	ca.png \
	dd_avail.png \
	dd_gray.png \
	dd.png \
	down.png \
	dummy.png \
	dummy_small.png \
	epg.png \
	epg_small.png \
	help.png \
	help_small.png \
	home.png \
	info_blue.png \
	info_green.png \
	info.png \
	info_red.png \
	info_small.png \
	info_yellow.png \
	left.png \
	mainmenue.png \
	menu.png \
	menu_small.png \
	muted.png \
	power.png \
	res_000.png \
	res_720.png \
	res_hd.png \
	res_sd.png \
	res_uhd.png \
	right.png \
	settings.png \
	subt_gray.png \
	subt.png \
	tuner_01.png \
	tuner_02.png \
	tuner_03.png \
	tuner_04.png \
	tuner_webtv.png \
	up.png \
