installdir = $(THEMESDIR)/NI/icons

install_DATA = \
	0.png \
	16_9_gray.png \
	16_9.png \
	1.png \
	2.png \
	3.png \
	4.png \
	5.png \
	6.png \
	7.png \
	8.png \
	9.png \
	ats_gray.png \
	ats.png \
	audioplay.png \
	audio.png \
	bc_green.png \
	bc_white.png \
	bc_yellow.png \
	biss_green.png \
	biss_white.png \
	biss_yellow.png \
	bookmarkmanager.png \
	border_lr.png \
	border_ul.png \
	boxinfo.png \
	btn_backward.png \
	btn_blue.png \
	btn_forward.png \
	btn_green.png \
	btn_option_off_active.png \
	btn_option_off_inactive.png \
	btn_option_on_active.png \
	btn_option_on_inactive.png \
	btn_pause.png \
	btn_play.png \
	btn_record_active.png \
	btn_record_inactive.png \
	btn_red.png \
	btn_stop.png \
	btn_timer.png \
	btn_yellow.png \
	ca_gray.png \
	ca.png \
	cccam_green.png \
	cccam_white.png \
	cccam_yellow.png \
	ci+_green.png \
	ci+_white.png \
	clock_face.png \
	colors.png \
	conax_green.png \
	conax_white.png \
	conax_yellow.png \
	cw_green.png \
	cw_white.png \
	cw_yellow.png \
	dd_avail.png \
	dd_gray.png \
	dd.png \
	dec_card.png \
	dec_fta.png \
	dec_int.png \
	dec_na.png \
	dec_net.png \
	deutsch.png \
	d_green.png \
	doscam_green.png \
	doscam_white.png \
	doscam_yellow.png \
	down.png \
	dummy.png \
	dummy_small.png \
	d_white.png \
	d_yellow.png \
	edit.png \
	english.png \
	epg.png \
	epg_small.png \
	error.png \
	features.png \
	file.png \
	folder.png \
	games.png \
	gbox_green.png \
	gbox_white.png \
	gbox_yellow.png \
	help.png \
	help_small.png \
	hint_adzap.png \
	hint_a_pic.png \
	hint_aplay.png \
	hint_audio.png \
	hint_avinputmode.png \
	hint_back.png \
	hint_backup.png \
	hint_bedit.png \
	hint_blank_screen.png \
	hint_ci.png \
	hint_dboxinfo.png \
	hint_default.png \
	hint_delete.png \
	hint_extended.png \
	hint_factory.png \
	hint_fileplay.png \
	hint_games.png \
	hint_hdd_info.png \
	hint_hdd.png \
	hint_imageinfo.png \
	hint_imagelogo.png \
	hint_inetradio.png \
	hint_info.png \
	hint_keys.png \
	hint_language.png \
	hint_lcd4linux.png \
	hint_load.png \
	hint_manage.png \
	hint_mb.png \
	hint_media.png \
	hint_movie.png \
	hint_network.png \
	hint_next.png \
	hint_osd.png \
	hint_personalize.png \
	hint_picview.png \
	hint_plugin.png \
	hint_protection.png \
	hint_radiomode.png \
	hint_reboot.png \
	hint_recording.png \
	hint_reload.png \
	hint_reset.png \
	hint_restart.png \
	hint_restore.png \
	hint_saveas.png \
	hint_save.png \
	hint_scan.png \
	hint_scripts.png \
	hint_service.png \
	hint_settings.png \
	hint_shutdown.png \
	hint_sleeptimer.png \
	hint_streaminfo.png \
	hint_swupdate.png \
	hint_timers.png \
	hint_tvmode.png \
	hint_tvradio_switch.png \
	hint_vfd.png \
	hint_video.png \
	hint_vtxt.png \
	hint_webradio.png \
	hint_webtv.png \
	hint_xmltv.png \
	hint_ytplay.png \
	home.png \
	hourglass0.png \
	hourglass10.png \
	hourglass1.png \
	hourglass2.png \
	hourglass3.png \
	hourglass4.png \
	hourglass5.png \
	hourglass6.png \
	hourglass7.png \
	hourglass8.png \
	hourglass9.png \
	icon_blue.png \
	icon_green.png \
	icon_red.png \
	icon_yellow.png \
	imdb.png \
	info0_off.png \
	info0_on.png \
	info1_off.png \
	info1_on.png \
	info2_off.png \
	info2_on.png \
	info3_off.png \
	info3_on.png \
	info4_off.png \
	info4_on.png \
	info_blue.png \
	info_green.png \
	info.png \
	info_red.png \
	information.png \
	info_small.png \
	info_yellow.png \
	ird_green.png \
	ird_white.png \
	ird_yellow.png \
	keybinding.png \
	language.png \
	lcd.png \
	left.png \
	lock.png \
	longpress.png \
	mainmenue.png \
	marker_dialog_off.png \
	marker_dialog_ok.png \
	marker_epg.png \
	marker_hd.png \
	marker_hidden.png \
	marker_lock_passive.png \
	marker_lock.png \
	marker_pip.png \
	marker_radio.png \
	marker_record_gray.png \
	marker_record.png \
	marker_scrambled.png \
	marker_sd.png \
	marker_streaming.png \
	marker_timeshift_gray.png \
	marker_timeshift.png \
	marker_tv.png \
	marker_uhd.png \
	marker_update_available.png \
	marker_warning.png \
	marker_zap.png \
	menu.png \
	menu_small.png \
	mgcamd_green.png \
	mgcamd_white.png \
	mgcamd_yellow.png \
	mounted.png \
	movieplayer.png \
	movie.png \
	mp3.png \
	mp_b-skip.png \
	mp_f-skip.png \
	mp_pause.png \
	mp_play.png \
	mp_play_repeat_all.png \
	mp_play_repeat_track.png \
	multimedia.png \
	muted.png \
	mute.png \
	mute_small.png \
	mute_zap_gray.png \
	mute_zap_green.png \
	nagra_green.png \
	nagra_white.png \
	nagra_yellow.png \
	ncam_green.png \
	ncam_white.png \
	ncam_yellow.png \
	nds_green.png \
	nds_white.png \
	nds_yellow.png \
	network.png \
	not_mounted.png \
	numericpad.png \
	ok.png \
	oscam_green.png \
	oscam_white.png \
	oscam_yellow.png \
	osmod_green.png \
	osmod_white.png \
	osmod_yellow.png \
	personalize.png \
	picture.png \
	pictureviewer.png \
	power.png \
	powervu_green.png \
	powervu_white.png \
	powervu_yellow.png \
	question.png \
	radiotext_get.png \
	radiotext_off.png \
	radiotext.png \
	radiotext_wait.png \
	rclock.png \
	rec_gray.png \
	recording.png \
	rec.png \
	res_000.png \
	res_1080.png \
	res_1280.png \
	res_1440.png \
	res_1920.png \
	res_2160.png \
	res_288.png \
	res_352.png \
	res_382.png \
	res_480.png \
	res_528.png \
	res_544.png \
	res_576.png \
	res_704.png \
	res_720.png \
	res_hd.png \
	res_sd.png \
	res_uhd.png \
	right.png \
	seca_green.png \
	seca_white.png \
	seca_yellow.png \
	settings.png \
	shell.png \
	slider_alpha.png \
	slider_blue.png \
	slider_body.png \
	slider_body_progress.png \
	slider_green.png \
	slider_inactive.png \
	slider_red.png \
	softupdate.png \
	star-off.png \
	star-on.png \
	stars_bg.png \
	stars.png \
	streaming.png \
	subt_gray.png \
	subt.png \
	tan_green.png \
	tan_white.png \
	tan_yellow.png \
	timer.png \
	tmdb.png \
	tuner_01.png \
	tuner_02.png \
	tuner_03.png \
	tuner_04.png \
	tuner_05.png \
	tuner_06.png \
	tuner_07.png \
	tuner_08.png \
	tuner_09.png \
	tuner_10.png \
	tuner_11.png \
	tuner_12.png \
	tuner_13.png \
	tuner_14.png \
	tuner_15.png \
	tuner_16.png \
	tuner_17.png \
	tuner_18.png \
	tuner_19.png \
	tuner_20.png \
	tuner_21.png \
	tuner_22.png \
	tuner_23.png \
	tuner_24.png \
	tuner.png \
	upnp.png \
	up.png \
	via_green.png \
	via_white.png \
	via_yellow.png \
	video.png \
	vmx_green.png \
	vmx_white.png \
	vmx_yellow.png \
	volume.png \
	vtxt_gray.png \
	vtxt.png \
	x_green.png \
	x_white.png \
	x_yellow.png \
	ytplay.png
