installdir = $(THEMESDIR)/TangoCash/icons

install_DATA = \
	hourglass0.png \
	hourglass1.png \
	hourglass2.png \
	hourglass3.png \
	hourglass4.png \
	hourglass5.png \
	hourglass6.png \
	hourglass7.png \
	hourglass8.png \
	hourglass9.png \
	hourglass10.png \
	hourglass11.png \
	hourglass12.png \
	hourglass13.png \
	hourglass14.png \
	hourglass15.png \
	hourglass16.png \
	hourglass17.png \
	hourglass18.png \
	hourglass19.png \
	hourglass20.png \
	hourglass21.png \
	hourglass22.png \
	hourglass23.png \
	hourglass24.png \
	hourglass25.png \
	hourglass26.png \
	hourglass27.png \
	hourglass28.png \
	hourglass29.png
